# rpo_deploy_depth

./: README.md  README_CN.md
scripts/: motion_player.py  set_zero.py
scripts/config/: motion_player.yaml
src/imu/: CMakeLists.txt  README.md  package.xml
src/imu/include/: imu_driver.hpp
src/imu/src/: CMakeLists.txt  imu_driver.cpp  pybind_module.cpp
src/imu/src/drivers/: CMakeLists.txt
src/imu/src/drivers/hipnuc/: CMakeLists.txt  canopen_parser.h  hipnuc_can_common.h  hipnuc_dec.c  hipnuc_dec.h  hipnuc_imu_driver.cpp  hipnuc_imu_driver.hpp  nmea_decode.c
src/imu/src/protocol/: CMakeLists.txt
src/imu/src/protocol/can/: socket_can.cpp  socket_can.hpp
src/imu/src/protocol/serial/: serial_port.cpp  serial_port.hpp
src/inference/: .gitignore  CMakeLists.txt  package.xml
src/inference/config/: inference.yaml  inference_amp.yaml  inference_attn_enc.yaml  inference_beyondmimic.yaml  inference_depth.yaml  inference_getup.yaml  inference_interrupt.yaml  realsense.yaml  robot.yaml
src/inference/include/: robot_interface.hpp
src/inference/launch/: inference.launch.py  inference_depth.launch.py
src/inference/models/: 0-depth_encoder.onnx  policy.onnx  policy17.onnx  policy52.onnx  policy_amp.onnx  policy_attn_enc.onnx  policy_dance.onnx  policy_getup.onnx  policy_interrupt.onnx  policy_punch.onnx  policy_wave.onnx
src/inference/motions/: dance.npz  getup.npz  punch.npz  wave.npz
src/inference/src/: depth_node.cpp  inference_node.cpp  inference_node.hpp  obs_manager.cpp  pybind_module.cpp  robot_interface.cpp  ros_interface.cpp
src/inference/src/utils/: CMakeLists.txt  close_chain_mapping.cpp  close_chain_mapping.hpp  motion_loader.cpp  motion_loader.hpp  thread_pool.hpp
src/motors/: .gitignore  CMakeLists.txt  package.xml
src/motors/include/: motor_driver.hpp
src/motors/src/: motor_driver.cpp  pybind_module.cpp  utils.hpp
src/motors/src/drivers/: CMakeLists.txt
src/motors/src/drivers/dm/: CMakeLists.txt  dm_motor_driver.cpp  dm_motor_driver.hpp
src/motors/src/drivers/evo/: CMakeLists.txt  evo_motor_driver.cpp  evo_motor_driver.hpp
src/motors/src/protocol/: CMakeLists.txt
src/motors/src/protocol/can/: socket_can.cpp  socket_can.hpp
tools/: start_robot.sh  start_robot_depth.sh
tools/create_ap/: create_ap_orangepi.conf  create_ap_sunrise.conf
